--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>js-pwdgen-wannabe</title>
 </head>
 <body>
+  <h2 id="password"></h2>
   <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
